refactor: renamed interface method